# cookiecutter-django-app

./: LICENSE  README.rst  cookiecutter.json  pyproject.toml
.github/workflows/: tests.yml
tests/: test_bake_project.py  test_project_structure.py  test_run_app_tests.py
{{cookiecutter.repo_name}}/: .bumpversion.cfg  README.rst  pyproject.toml
{{cookiecutter.repo_name}}/docs/: conf.py  index.rst
{{cookiecutter.repo_name}}/tests/: test_settings.py  test_urls.py  test_views.py
{{cookiecutter.repo_name}}/tests/test_app/: settings.py
{{cookiecutter.repo_name}}/{{cookiecutter.app_name}}/: __init__.py  apps.py  settings.py  views.py
