[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "cookiecutter-django-app"
version = "0.1.0"
description = "Cookiecutter for Django app."
authors = ["Alexandr Stefanitsky-Mozdor <stefanitsky.mozdor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
cookiecutter = "^1.7.2"
pytest = { version = "^5.4.3", optional = true }
pytest-cookies = { version = "^0.5.1", optional = true }
django = { version = "^3.0.7", optional = true }
pytest-django = { version = "^3.9.0", optional = true }
black = { version = "^19.10b0", optional = true }

[tool.poetry.extras]
dev = ["django", "pytest", "pytest-django", "pytest-cookies", "black"]
